Update to using better dialog

--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,887 +1,942 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "pages/index.f9aeee1ebea14b15b87d.js.map",
-    "pages/index.f9aeee1ebea14b15b87d.js",
-    "layouts/default.46f0074ab1b4c753828b.js",
-    "pages/About.fed67c0ad5c05c5b5dbd.js",
-    "common.edc9b3f07183a20e5cfb.js",
-    "app.3847bc30f0bb69913242.js",
-    "manifest.0c580ad792926839685d.js",
+    "pages/Admin.c11b6befce75c2aa32dd.js.map",
+    "pages/Admin.c11b6befce75c2aa32dd.js",
+    "layouts/default.d38129373b4e775c471c.js",
+    "pages/Dialog.cd4f5cf2dc9312294379.js",
+    "pages/About.4d78b7fc1b05fd2fe8be.js",
+    "common.8e6c3f8c273f82049fab.js",
+    "app.432145e7b0c74edb1326.js",
+    "manifest.031da1c1cb6b59cb777d.js",
     "common.2ad8fa0064d5fcf555fe8621ecf14f68.css",
     "LICENSES",
-    "pages/Admin.56e94c843d78143e5794.js",
-    "pages/Admin.56e94c843d78143e5794.js.map",
-    "layouts/default.46f0074ab1b4c753828b.js.map",
-    "pages/About.fed67c0ad5c05c5b5dbd.js.map",
-    "common.edc9b3f07183a20e5cfb.js.map",
-    "app.3847bc30f0bb69913242.js.map",
+    "pages/index.330982febaa58a00db9a.js",
+    "pages/index.330982febaa58a00db9a.js.map",
+    "layouts/default.d38129373b4e775c471c.js.map",
+    "pages/Dialog.cd4f5cf2dc9312294379.js.map",
+    "pages/About.4d78b7fc1b05fd2fe8be.js.map",
+    "common.8e6c3f8c273f82049fab.js.map",
+    "app.432145e7b0c74edb1326.js.map",
     "common.2ad8fa0064d5fcf555fe8621ecf14f68.css.map",
-    "manifest.0c580ad792926839685d.js.map",
+    "manifest.031da1c1cb6b59cb777d.js.map",
     "index.spa.html",
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.0c580ad792926839685d.js",
-    "common.edc9b3f07183a20e5cfb.js",
-    "app.3847bc30f0bb69913242.js"
+    "manifest.031da1c1cb6b59cb777d.js",
+    "common.8e6c3f8c273f82049fab.js",
+    "app.432145e7b0c74edb1326.js"
   ],
   "async": [
-    "pages/index.f9aeee1ebea14b15b87d.js",
-    "layouts/default.46f0074ab1b4c753828b.js",
-    "pages/About.fed67c0ad5c05c5b5dbd.js",
-    "pages/Admin.56e94c843d78143e5794.js"
+    "pages/Admin.c11b6befce75c2aa32dd.js",
+    "layouts/default.d38129373b4e775c471c.js",
+    "pages/Dialog.cd4f5cf2dc9312294379.js",
+    "pages/About.4d78b7fc1b05fd2fe8be.js",
+    "pages/index.330982febaa58a00db9a.js"
   ],
   "modules": {
     "34743616": [
-      4,
-      13
+      5,
+      15
     ],
     "71787424": [
-      4,
-      13
+      5,
+      15
     ],
     "c9a5df2a": [
-      4,
-      13
+      5,
+      15
     ],
-    "cb10d370": [
-      4,
-      13
-    ],
-    "5dea6790": [
-      4,
-      13
-    ],
-    "8693773e": [
-      4,
-      13
-    ],
-    "aca5fa7a": [
-      4,
-      13
-    ],
-    "88a08fd8": [
+    "929ff236": [
       1,
       0
     ],
+    "5c7e4673": [
+      1,
+      0
+    ],
+    "cb10d370": [
+      5,
+      15
+    ],
+    "5dea6790": [
+      5,
+      15
+    ],
+    "8693773e": [
+      5,
+      15
+    ],
+    "aca5fa7a": [
+      5,
+      15
+    ],
+    "88a08fd8": [
+      10,
+      11
+    ],
     "2d74c3ea": [
-      4,
-      13
+      5,
+      15
     ],
     "37ed05fa": [
-      4,
-      13
+      5,
+      15
     ],
     "2e99d4d9": [
-      4,
-      13
+      5,
+      15
     ],
     "2dc825e8": [
       2,
-      11
+      12
     ],
     "a8827e0c": [
-      4,
-      13
+      5,
+      15
     ],
     "91bcd71c": [
+      10,
+      11
+    ],
+    "d0c51f14": [
+      5,
+      15
+    ],
+    "45b7eb92": [
+      5,
+      15
+    ],
+    "645e2f7a": [
+      5,
+      15
+    ],
+    "51c06cff": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "d2aa02c4": [
+      5,
+      15
+    ],
+    "8eea9102": [
+      5,
+      15
+    ],
+    "55076fc8": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "18a16dd6": [
+      5,
+      15
+    ],
+    "0b1e29b4": [
+      5,
+      15
+    ],
+    "2e4edf5a": [
+      5,
+      15
+    ],
+    "0625339c": [
+      5,
+      15
+    ],
+    "9bbbeb60": [
       1,
       0
     ],
-    "d0c51f14": [
-      4,
-      13
-    ],
-    "45b7eb92": [
-      4,
-      13
-    ],
-    "645e2f7a": [
-      4,
-      13
-    ],
-    "51c06cff": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "d2aa02c4": [
-      4,
-      13
-    ],
-    "8eea9102": [
-      4,
-      13
-    ],
-    "55076fc8": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "18a16dd6": [
-      4,
-      13
-    ],
-    "0b1e29b4": [
-      4,
-      13
-    ],
-    "2e4edf5a": [
-      4,
-      13
-    ],
-    "0625339c": [
-      4,
-      13
-    ],
     "05bd1b99": [
-      4,
-      13
+      5,
+      15
     ],
     "eaa652e0": [
-      4,
-      13
+      5,
+      15
     ],
     "3ee2a62a": [
-      4,
-      13
+      5,
+      15
     ],
     "10a45c9c": [
-      4,
-      13
+      5,
+      15
     ],
     "3fa0e569": [
-      4,
-      13
+      5,
+      15
     ],
     "d29f67d2": [
-      9,
-      10
+      1,
+      0
     ],
     "d7684e34": [
-      4,
-      13
+      5,
+      15
     ],
     "64e53e12": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "106740b1": [
-      4,
-      13
+      5,
+      15
     ],
     "1369fd2f": [
+      4,
+      14
+    ],
+    "507930e1": [
       3,
-      12
+      13
     ],
     "ce20da44": [
-      4,
-      13
+      5,
+      15
     ],
     "a923acd0": [
-      4,
-      13
+      5,
+      15
+    ],
+    "099f05dc": [
+      1,
+      0
     ],
     "474cfc8d": [
-      4,
-      13
+      5,
+      15
     ],
     "2bafea54": [
-      4,
-      13
+      5,
+      15
     ],
     "229837bb": [
-      4,
-      13
+      5,
+      15
+    ],
+    "bd292434": [
+      1,
+      0
     ],
     "180effa0": [
-      4,
-      13
+      5,
+      15
     ],
     "9a6232ee": [
-      4,
-      13
+      5,
+      15
     ],
     "5e59e63e": [
-      4,
-      13
+      5,
+      15
     ],
     "fd0d1fe0": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "bc1c6616": [
-      4,
-      13
+      5,
+      15
     ],
     "0b6f5a36": [
-      4,
-      13
+      5,
+      15
     ],
     "4cee839d": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "3eedab15": [
-      4,
-      13
+      5,
+      15
     ],
     "52236eff": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
+    ],
+    "7aa6c412": [
+      1,
+      0
     ],
     "13e20794": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "32bdd064": [
-      4,
-      13
-    ],
-    "dd2a659a": [
-      4,
-      13
-    ],
-    "9e9d0166": [
-      4,
-      13
-    ],
-    "7b4b049a": [
       5,
-      7,
-      14,
       15
     ],
+    "dd2a659a": [
+      5,
+      15
+    ],
+    "9e9d0166": [
+      5,
+      15
+    ],
+    "7b4b049a": [
+      6,
+      8,
+      16,
+      17
+    ],
     "a892edc0": [
-      4,
-      13
+      5,
+      15
     ],
     "5b38d5f6": [
-      4,
-      13
+      5,
+      15
     ],
     "e0419134": [
-      4,
+      5,
+      15
+    ],
+    "21b6578a": [
+      3,
       13
     ],
     "7173bfb7": [
-      4,
-      13
+      5,
+      15
     ],
     "1e8496cc": [
-      4,
-      13
+      5,
+      15
     ],
     "64b938ef": [
-      4,
-      13
+      5,
+      15
     ],
     "7d56f4d2": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "67afb57c": [
-      4,
-      13
+      5,
+      15
     ],
     "172d717a": [
-      4,
-      13
+      5,
+      15
     ],
     "d0d2c236": [
-      4,
-      13
+      5,
+      15
     ],
     "49785cd6": [
-      4,
-      13
+      5,
+      15
     ],
     "107d77e7": [
-      4,
-      13
+      5,
+      15
     ],
     "5e7ea45c": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "947d34f0": [
       2,
-      11
+      12
     ],
     "680456e0": [
-      4,
-      13
+      5,
+      15
     ],
     "2cf2d4ea": [
-      4,
-      13
+      5,
+      15
     ],
     "0df04838": [
-      4,
-      13
+      5,
+      15
     ],
     "02033b56": [
-      4,
-      13
+      5,
+      15
+    ],
+    "e36b6966": [
+      1,
+      0
     ],
     "e077cf3e": [
-      4,
-      13
+      5,
+      15
     ],
     "7c45b238": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "14f34f34": [
-      4,
-      13
-    ],
-    "a73b0450": [
-      4,
-      13
-    ],
-    "0482b3e4": [
-      4,
-      13
-    ],
-    "f7583e16": [
       5,
-      7,
-      14,
       15
     ],
+    "a73b0450": [
+      5,
+      15
+    ],
+    "0482b3e4": [
+      5,
+      15
+    ],
+    "f7583e16": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "5e092e02": [
+      1,
+      0
+    ],
     "fe60a9f2": [
-      4,
-      13
+      5,
+      15
     ],
     "0483c257": [
-      4,
-      13
+      5,
+      15
     ],
     "a37e642c": [
-      4,
+      5,
+      15
+    ],
+    "96ba70d4": [
+      3,
       13
     ],
     "fed496f4": [
-      4,
-      13
+      5,
+      15
     ],
     "cbae1bd6": [
-      4,
-      13
+      5,
+      15
     ],
     "870ab4d8": [
-      4,
-      13
+      5,
+      15
     ],
     "26b50220": [
-      4,
-      13
+      5,
+      15
     ],
     "1ecb6ea4": [
-      4,
-      13
+      5,
+      15
     ],
     "6d8bd947": [
-      4,
-      13
+      5,
+      15
     ],
     "0f4c669a": [
-      4,
-      13
+      5,
+      15
     ],
     "2438e970": [
-      4,
-      13
+      5,
+      15
     ],
     "31467ad4": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "d8d3f89a": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "1499d10a": [
-      4,
-      13
+      5,
+      15
     ],
     "9d102996": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "2028ebc9": [
-      4,
-      13
+      5,
+      15
     ],
     "1c0379e3": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "4698d11c": [
-      4,
-      13
+      5,
+      15
     ],
     "5681189a": [
-      4,
-      13
+      5,
+      15
     ],
     "b25e5a00": [
-      4,
-      13
+      5,
+      15
     ],
     "43bdf916": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "64912bf1": [
-      9,
-      10
+      1,
+      0
     ],
     "cf22443c": [
-      4,
-      13
+      5,
+      15
     ],
     "3fd493d2": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "0a15f7a6": [
-      4,
-      13
+      5,
+      15
     ],
     "0b1b5941": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "64f3916c": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "2be03ee2": [
-      4,
-      13
+      5,
+      15
     ],
     "0e30fa5b": [
-      4,
-      13
+      5,
+      15
     ],
     "0579d661": [
-      4,
-      13
+      5,
+      15
     ],
     "a85f3f76": [
-      4,
-      13
+      5,
+      15
     ],
     "36ad6d92": [
-      4,
-      13
+      5,
+      15
     ],
     "7870e0a3": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "456916c8": [
-      4,
-      13
+      5,
+      15
     ],
     "73dd295e": [
-      4,
-      13
+      5,
+      15
     ],
     "5c01d15c": [
-      4,
-      13
+      5,
+      15
     ],
     "175a852f": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "4d926c57": [
-      4,
-      13
+      5,
+      15
     ],
     "4ebf2f56": [
-      4,
-      13
+      5,
+      15
     ],
     "4154936e": [
-      4,
-      13
+      5,
+      15
     ],
     "9fa47a64": [
-      4,
-      13
+      5,
+      15
     ],
     "87d12d60": [
-      4,
-      13
+      5,
+      15
     ],
     "7d7ac104": [
-      4,
-      13
+      5,
+      15
     ],
     "062cd7d7": [
-      4,
-      13
+      5,
+      15
     ],
     "9a9b7efe": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "0d3e6114": [
       2,
-      11
+      12
     ],
     "34e4516a": [
-      4,
-      13
-    ],
-    "c98036cc": [
-      4,
-      13
-    ],
-    "34a0790b": [
       5,
-      7,
-      14,
       15
     ],
+    "c98036cc": [
+      5,
+      15
+    ],
+    "34a0790b": [
+      6,
+      8,
+      16,
+      17
+    ],
     "7fdb7fb5": [
-      4,
-      13
+      5,
+      15
     ],
     "81cd08f8": [
-      4,
-      13
+      5,
+      15
     ],
     "10b17756": [
-      4,
-      13
+      5,
+      15
     ],
     "4f055832": [
-      4,
-      13
+      5,
+      15
     ],
     "2188eb98": [
-      4,
-      13
+      5,
+      15
     ],
     "18838ce9": [
       2,
-      11
+      12
     ],
     "221d4281": [
-      4,
-      13
+      5,
+      15
     ],
     "bfe36e56": [
-      4,
-      13
+      5,
+      15
     ],
     "875da2ac": [
-      4,
-      13
+      5,
+      15
     ],
     "101dff2c": [
-      4,
-      13
+      5,
+      15
     ],
     "5e313c00": [
-      4,
-      13
+      5,
+      15
     ],
     "ad9956c6": [
-      4,
-      13
+      5,
+      15
     ],
     "6f3e6c9e": [
-      4,
-      13
+      5,
+      15
     ],
     "5791cd7d": [
-      9,
-      10
+      1,
+      0
     ],
     "465781db": [
-      4,
-      13
+      5,
+      15
     ],
     "3f42717b": [
-      4,
-      13
+      5,
+      15
     ],
     "b9846196": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "6b8c837a": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "7bcb24ff": [
-      5,
-      7,
-      14,
-      15
+      6,
+      8,
+      16,
+      17
     ],
     "613b49c4": [
       2,
-      11
-    ],
-    "12b206eb": [
-      4,
-      13
-    ],
-    "89fb6bd2": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "dc1820b2": [
-      4,
-      13
-    ],
-    "d0e584b6": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "11d68e4a": [
-      4,
-      13
-    ],
-    "5aa4bacd": [
-      4,
-      13
-    ],
-    "0df0c25c": [
-      4,
-      13
-    ],
-    "783222fc": [
-      4,
-      13
-    ],
-    "53c08b51": [
-      4,
-      13
-    ],
-    "a12394e4": [
-      4,
-      13
-    ],
-    "d0c9aaca": [
-      4,
-      13
-    ],
-    "5e6084f1": [
-      1,
-      0
-    ],
-    "64342bc4": [
-      4,
-      13
-    ],
-    "0e9655f0": [
-      4,
-      13
-    ],
-    "40391c11": [
-      4,
-      13
-    ],
-    "4a90a558": [
-      4,
-      13
-    ],
-    "2d9a3e8f": [
-      4,
-      13
-    ],
-    "1b032524": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "211d48d0": [
-      9,
-      10
-    ],
-    "3fef53a4": [
-      4,
-      13
-    ],
-    "a29f4cc0": [
-      1,
-      0
-    ],
-    "12dacd30": [
-      4,
-      13
-    ],
-    "598b1454": [
-      4,
-      13
-    ],
-    "7bb2f2a6": [
-      4,
-      13
-    ],
-    "17a3572a": [
-      4,
-      13
-    ],
-    "7d28890e": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "3a08e68b": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "9c7e6144": [
-      4,
-      13
-    ],
-    "3d17873c": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "56f40203": [
-      4,
-      13
-    ],
-    "1134af74": [
-      4,
-      13
-    ],
-    "122d8377": [
-      4,
-      13
-    ],
-    "1d47a54c": [
-      5,
-      7,
-      14,
-      15
-    ],
-    "038fbdd3": [
-      4,
-      13
-    ],
-    "ef940b1a": [
-      1,
-      0
-    ],
-    "395407e2": [
-      3,
       12
     ],
-    "d712336a": [
-      4,
-      13
-    ],
-    "95b36600": [
-      4,
-      13
-    ],
-    "28fd2dbf": [
-      4,
-      13
-    ],
-    "d93d7826": [
+    "12b206eb": [
       5,
-      7,
-      14,
       15
     ],
-    "7b4ec17d": [
+    "89fb6bd2": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "1782ad8e": [
+      1,
+      0
+    ],
+    "dc1820b2": [
+      5,
+      15
+    ],
+    "d0e584b6": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "11d68e4a": [
+      5,
+      15
+    ],
+    "5aa4bacd": [
+      5,
+      15
+    ],
+    "0df0c25c": [
+      5,
+      15
+    ],
+    "783222fc": [
+      5,
+      15
+    ],
+    "53c08b51": [
+      5,
+      15
+    ],
+    "a12394e4": [
+      5,
+      15
+    ],
+    "d0c9aaca": [
+      5,
+      15
+    ],
+    "5e6084f1": [
+      10,
+      11
+    ],
+    "64342bc4": [
+      5,
+      15
+    ],
+    "0e9655f0": [
+      5,
+      15
+    ],
+    "40391c11": [
+      5,
+      15
+    ],
+    "4a90a558": [
+      5,
+      15
+    ],
+    "2d9a3e8f": [
+      5,
+      15
+    ],
+    "1b032524": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "211d48d0": [
+      1,
+      0
+    ],
+    "3fef53a4": [
+      5,
+      15
+    ],
+    "a29f4cc0": [
+      10,
+      11
+    ],
+    "12dacd30": [
+      5,
+      15
+    ],
+    "598b1454": [
+      5,
+      15
+    ],
+    "7bb2f2a6": [
+      5,
+      15
+    ],
+    "17a3572a": [
+      5,
+      15
+    ],
+    "7d28890e": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "3a08e68b": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "9c7e6144": [
+      5,
+      15
+    ],
+    "3d17873c": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "56f40203": [
+      5,
+      15
+    ],
+    "1134af74": [
+      5,
+      15
+    ],
+    "122d8377": [
+      5,
+      15
+    ],
+    "1d47a54c": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "038fbdd3": [
+      5,
+      15
+    ],
+    "ef940b1a": [
+      10,
+      11
+    ],
+    "395407e2": [
       4,
-      13
+      14
+    ],
+    "d712336a": [
+      5,
+      15
+    ],
+    "95b36600": [
+      5,
+      15
+    ],
+    "28fd2dbf": [
+      5,
+      15
+    ],
+    "d93d7826": [
+      6,
+      8,
+      16,
+      17
+    ],
+    "7b4ec17d": [
+      5,
+      15
     ],
     "4bbab687": [
-      4,
-      13
+      5,
+      15
     ],
     "5fda5646": [
-      4,
-      13
+      5,
+      15
     ],
     "4da865c8": [
-      4,
-      13
+      5,
+      15
     ],
     "035ed791": [
-      4,
-      13
+      5,
+      15
+    ],
+    "78bd2b16": [
+      1,
+      0
     ],
     "6e072836": [
-      4,
-      13
+      5,
+      15
     ],
     "731a9af9": [
-      4,
-      13
+      5,
+      15
     ],
     "d3f085b2": [
-      9,
-      10
+      1,
+      0
     ]
   }
 }
