--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "fireserve": "firebase serve --only functions,hosting",
     "dev": "cd \"src\" && yarn nuxt",
     "dev-api": "yarn api & yarn dev",
-    "build-client": "cd \"src\" && yarn nuxt build && yarn copyassets",
-    "build-server": "cd \"prod/server\" && yarn",
-    "build-all": "yarn build:client && yarn build:server",
+    "build:client": "cd \"src\" && yarn nuxt build && yarn copyassets",
+    "build:server": "cd \"prod/server\" && yarn",
+    "build:all": "yarn build:client && yarn build:server",
     "start": "cd \"src\" && yarn nuxt start",
     "generate": "cd \"src\" && yarn nuxt generate",
-    "prepare-deploy": "yarn build-client && firebase deploy",
+    "prepare-deploy": "yarn build:client && firebase deploy",
     "deploy": "firebase deploy",
     "assets": "cd \"src\" && yarn copyassets",
     "api": "firebase serve --only functions"
