--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "vuetify": "^0.15.1"
   },
   "scripts": {
+    "dev-test": "cross-env HOST=0.0.0.0 PORT=3333 nuxt",
     "setup": "yarn setup:client && yarn setup:server && yarn build && yarn setup:firebase",
     "setup:client": "cd \"src\" && yarn",
     "setup:server": "cd \"prod/server\" && yarn",
@@ -27,5 +28,8 @@
     "deploy": "firebase deploy",
     "assets": "cd \"src\" && yarn copyassets",
     "ssr": "firebase serve --only functions"
+  },
+  "devDependencies": {
+    "cross-env": "^5.0.5"
   }
 }
