--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,39 +1,39 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "pages/Admin.07a0d4a664e63095e5c4.js.map",
-    "pages/Admin.07a0d4a664e63095e5c4.js",
-    "layouts/default.d38129373b4e775c471c.js",
-    "pages/Dialog.cd4f5cf2dc9312294379.js",
+    "pages/Test.2b2da90002741a77f3b1.js.map",
+    "pages/Test.2b2da90002741a77f3b1.js",
+    "pages/index.ba49fe4f806a423427ea.js",
+    "layouts/default.815df80c3053cc19db6a.js",
     "pages/about.7124ea317518df5c5e61.js",
     "common.8e6c3f8c273f82049fab.js",
-    "app.a35152b598cd892d5d95.js",
-    "manifest.67115b79928401b16c1b.js",
+    "app.d1a2c98945847efdd598.js",
+    "manifest.d003b9af7e1ee232ae2a.js",
     "common.2ad8fa0064d5fcf555fe8621ecf14f68.css",
     "LICENSES",
-    "pages/index.cd0b1d9ffdc5ed4dec94.js",
-    "pages/index.cd0b1d9ffdc5ed4dec94.js.map",
-    "layouts/default.d38129373b4e775c471c.js.map",
-    "pages/Dialog.cd4f5cf2dc9312294379.js.map",
+    "pages/Admin.d642456202ce9256b106.js",
+    "pages/Admin.d642456202ce9256b106.js.map",
+    "pages/index.ba49fe4f806a423427ea.js.map",
+    "layouts/default.815df80c3053cc19db6a.js.map",
     "pages/about.7124ea317518df5c5e61.js.map",
     "common.8e6c3f8c273f82049fab.js.map",
-    "app.a35152b598cd892d5d95.js.map",
+    "app.d1a2c98945847efdd598.js.map",
     "common.2ad8fa0064d5fcf555fe8621ecf14f68.css.map",
-    "manifest.67115b79928401b16c1b.js.map",
+    "manifest.d003b9af7e1ee232ae2a.js.map",
     "index.spa.html",
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.67115b79928401b16c1b.js",
+    "manifest.d003b9af7e1ee232ae2a.js",
     "common.8e6c3f8c273f82049fab.js",
-    "app.a35152b598cd892d5d95.js"
+    "app.d1a2c98945847efdd598.js"
   ],
   "async": [
-    "pages/Admin.07a0d4a664e63095e5c4.js",
-    "layouts/default.d38129373b4e775c471c.js",
-    "pages/Dialog.cd4f5cf2dc9312294379.js",
+    "pages/Test.2b2da90002741a77f3b1.js",
+    "pages/index.ba49fe4f806a423427ea.js",
+    "layouts/default.815df80c3053cc19db6a.js",
     "pages/about.7124ea317518df5c5e61.js",
-    "pages/index.cd0b1d9ffdc5ed4dec94.js"
+    "pages/Admin.d642456202ce9256b106.js"
   ],
   "modules": {
     "34743616": [
@@ -47,14 +47,6 @@
     "c9a5df2a": [
       5,
       15
-    ],
-    "929ff236": [
-      1,
-      0
-    ],
-    "5c7e4673": [
-      1,
-      0
     ],
     "cb10d370": [
       5,
@@ -73,8 +65,8 @@
       15
     ],
     "88a08fd8": [
-      10,
-      11
+      2,
+      12
     ],
     "2d74c3ea": [
       5,
@@ -89,16 +81,16 @@
       15
     ],
     "2dc825e8": [
-      2,
-      12
+      3,
+      13
     ],
     "a8827e0c": [
       5,
       15
     ],
     "91bcd71c": [
-      10,
-      11
+      2,
+      12
     ],
     "d0c51f14": [
       5,
@@ -113,8 +105,8 @@
       15
     ],
     "f074f0fa": [
-      10,
-      11
+      2,
+      12
     ],
     "51c06cff": [
       6,
@@ -136,6 +128,10 @@
       16,
       17
     ],
+    "536dcf60": [
+      1,
+      0
+    ],
     "18a16dd6": [
       5,
       15
@@ -151,10 +147,6 @@
     "0625339c": [
       5,
       15
-    ],
-    "9bbbeb60": [
-      1,
-      0
     ],
     "05bd1b99": [
       5,
@@ -177,8 +169,8 @@
       15
     ],
     "d29f67d2": [
-      1,
-      0
+      10,
+      11
     ],
     "d7684e34": [
       5,
@@ -194,10 +186,6 @@
       5,
       15
     ],
-    "507930e1": [
-      3,
-      13
-    ],
     "ce20da44": [
       5,
       15
@@ -205,10 +193,6 @@
     "a923acd0": [
       5,
       15
-    ],
-    "099f05dc": [
-      1,
-      0
     ],
     "474cfc8d": [
       5,
@@ -221,10 +205,6 @@
     "229837bb": [
       5,
       15
-    ],
-    "bd292434": [
-      1,
-      0
     ],
     "180effa0": [
       5,
@@ -268,10 +248,6 @@
       16,
       17
     ],
-    "7aa6c412": [
-      1,
-      0
-    ],
     "13e20794": [
       6,
       8,
@@ -308,9 +284,9 @@
       5,
       15
     ],
-    "21b6578a": [
-      3,
-      13
+    "7c4ccc54": [
+      1,
+      0
     ],
     "7173bfb7": [
       5,
@@ -342,6 +318,10 @@
       5,
       15
     ],
+    "13344c59": [
+      1,
+      0
+    ],
     "49785cd6": [
       5,
       15
@@ -357,8 +337,8 @@
       17
     ],
     "947d34f0": [
-      2,
-      12
+      3,
+      13
     ],
     "680456e0": [
       5,
@@ -375,10 +355,6 @@
     "02033b56": [
       5,
       15
-    ],
-    "e36b6966": [
-      1,
-      0
     ],
     "e077cf3e": [
       5,
@@ -408,10 +384,6 @@
       16,
       17
     ],
-    "5e092e02": [
-      1,
-      0
-    ],
     "fe60a9f2": [
       5,
       15
@@ -424,10 +396,6 @@
       5,
       15
     ],
-    "96ba70d4": [
-      3,
-      13
-    ],
     "fed496f4": [
       5,
       15
@@ -439,6 +407,10 @@
     "870ab4d8": [
       5,
       15
+    ],
+    "3c1a690a": [
+      1,
+      0
     ],
     "26b50220": [
       5,
@@ -511,8 +483,8 @@
       17
     ],
     "64912bf1": [
-      1,
-      0
+      10,
+      11
     ],
     "cf22443c": [
       5,
@@ -551,6 +523,10 @@
     "0579d661": [
       5,
       15
+    ],
+    "730becab": [
+      1,
+      0
     ],
     "a85f3f76": [
       5,
@@ -619,8 +595,8 @@
       17
     ],
     "0d3e6114": [
-      2,
-      12
+      3,
+      13
     ],
     "34e4516a": [
       5,
@@ -665,8 +641,8 @@
       15
     ],
     "18838ce9": [
-      2,
-      12
+      3,
+      13
     ],
     "221d4281": [
       5,
@@ -701,8 +677,8 @@
       14
     ],
     "5791cd7d": [
-      1,
-      0
+      10,
+      11
     ],
     "465781db": [
       5,
@@ -731,8 +707,8 @@
       17
     ],
     "613b49c4": [
-      2,
-      12
+      3,
+      13
     ],
     "12b206eb": [
       5,
@@ -743,10 +719,6 @@
       8,
       16,
       17
-    ],
-    "1782ad8e": [
-      1,
-      0
     ],
     "dc1820b2": [
       5,
@@ -791,8 +763,8 @@
       14
     ],
     "5e6084f1": [
-      10,
-      11
+      2,
+      12
     ],
     "0e9655f0": [
       5,
@@ -817,16 +789,16 @@
       17
     ],
     "211d48d0": [
-      1,
-      0
+      10,
+      11
     ],
     "3fef53a4": [
       5,
       15
     ],
     "a29f4cc0": [
-      10,
-      11
+      2,
+      12
     ],
     "12dacd30": [
       5,
@@ -889,8 +861,8 @@
       15
     ],
     "ef940b1a": [
-      10,
-      11
+      2,
+      12
     ],
     "d712336a": [
       5,
@@ -926,10 +898,6 @@
       5,
       15
     ],
-    "78bd2b16": [
-      1,
-      0
-    ],
     "6e072836": [
       5,
       15
@@ -939,8 +907,8 @@
       15
     ],
     "d3f085b2": [
-      1,
-      0
+      10,
+      11
     ]
   }
 }
