--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firebase-functions-nuxt-example",
+  "name": "Nuxt-SSR-Firebase",
   "version": "1.0.0",
   "description": "Host Nuxt.js SSR app on Firebase Cloud Functions with Firebase Hosting redirects.",
   "license": "MIT",
@@ -15,14 +15,12 @@
     "setup:firebase": "mv .setup-firebaserc .firebaserc",
     "setup:firebase2": "cp .firebaserc-d .firebaserc-d2",
     "fireserve": "firebase serve --only functions,hosting",
-    "dev": "cd \"src\" && yarn nuxt",
-    "dev-ssr": "yarn ssr & yarn dev",
-    "build": "cd \"src\" && yarn nuxt build && yarn copyassets",
+    "dev": "cross-env NODE_ENV=development yarn dev-ssr",
+    "dev-ssr": "yarn ssr & cd \"src\" && yarn nuxt",
+    "build": "cross-env NODE_ENV=production yarn build:client",
     "build:client": "cd \"src\" && yarn nuxt build && yarn copyassets",
-    "build:server": "cd \"prod/server\" && yarn",
-    "build:all": "yarn build:client && yarn build:server",
     "generate": "cd \"src\" && yarn nuxt generate",
-    "deploy": "yarn build:client && firebase deploy",
+    "deploy": "firebase deploy",
     "assets": "cd \"src\" && yarn copyassets",
     "ssr": "firebase serve --only functions"
   },
